--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -22,7 +22,7 @@
     {% endfor %}
   {% endif %}
   
-  <form method="post" action="{% url 'login' %}">
+  <form method="post" action="{% url 'accounts:login' %}">
     {% csrf_token %}
 
     <div>
